# django-templates-cythonized

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PLAN.md  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  tag.yml
django_templates_cythonized/: __init__.py  backend.py  base.pxd  base.py  context.pxd  context.py  defaultfilters.py  defaulttags.py  engine.py  exceptions.py  formats.pxd  formats.py  forms.py  html.pxd  html.py  library.py  loader_tags.py  response.py  safestring.py  smartif.pxd  smartif.py  timezone.pxd  timezone.py  utils.py
django_templates_cythonized/loaders/: app_directories.py  base.py  cached.py  filesystem.py  locmem.py
docs/: index.md
docs/getting-started/: installation.md
docs/reference/: changelog.md
main/: 404.html  index.html  sitemap.xml
main/getting-started/installation/: index.html
main/reference/changelog/: index.html
main/search/: search_index.json
tests/: conftest.py  settings.py  test_admin.py  test_compatibility.py  test_django_audit.py  test_forms_fast.py  test_integration.py  test_production_bugs.py  test_templates.py  urls.py
tests/benchmarks/: conftest.py  test_benchmarks.py
tests/benchmarks/templates/: bench_filters.html  bench_if.html  bench_variables.html
tests/templates/: _badge.html  _user_card.html  base.html  child.html  flat_chain_a.html  flat_chain_b.html  flat_chain_c.html  flat_inner.html  flat_outer.html  grandchild.html  include_simple.html  middle.html
tests/templatetags/: custom_filters.py  custom_tags.py
