[project]
name = "django-templates-cythonized"
version = "0.1.0"
description = "Cython-accelerated Django template engine for benchmarking template rendering speedup (3-14x faster)"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.12"
keywords = ["django", "templates", "cython", "performance"]
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["Django>=5.2,<7"]

[project.urls]
Homepage = "https://github.com/oliverhaas/django-templates-cythonized"
Repository = "https://github.com/oliverhaas/django-templates-cythonized.git"

[build-system]
requires = ["setuptools>=74.1", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "Cython==3.2.4",
  "pre-commit==4.6.0",
  "pytest==9.0.3",
  "pytest-codspeed==4.4.0",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "ruff==0.15.12",
]

[tool.setuptools.packages.find]
include = ["django_templates_cythonized*"]

[tool.setuptools.package-data]
django_templates_cythonized = ["*.pxd"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",  # Conflicts with ruff-format
  "D",       # Docstrings - Django source doesn't follow our style
  "E501",    # Line length handled by config
  "EM",      # Exception strings inline are fine
  "FBT",     # Boolean params match Django's API
  "PLR0913", # Too many args - Django's existing API
  "PLR2004", # Magic values from Django source
  "SLF001",  # Private member access needed for Django internals
  "TRY003",  # Long exception messages are helpful for debugging
  "TRY300",  # return in try block is cleaner for some patterns
  "SIM108",  # Ternary not always clearer
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",     # Type annotations not required in tests
  "ARG",     # Unused arguments common in fixtures
  "B905",    # zip strict not needed in tests
  "C901",    # Complex functions okay in test helpers
  "DTZ001",  # Naive datetimes fine in tests
  "E402",    # Late imports for Django setup in conftest
  "F811",    # Redefined names from fixture reuse patterns
  "F841",    # Unused variables okay in tests
  "FBT",     # Boolean args fine in test fixtures and test calls
  "N818",    # Exception naming conventions relaxed
  "PERF401", # Manual list comprehension okay in tests
  "PLC0415", # Late imports for Django setup
  "PLR0912", # Too many branches in test helpers
  "PLR0911", # Too many return statements in test helpers
  "PLR1714", # Repeated equality comparisons okay
  "PT006",   # Parametrize tuple style is preference
  "PT009",   # pytest-style assertions not enforced
  "PT011",   # Broad pytest.raises okay in some tests
  "PT013",   # pytest import style is preference
  "PT018",   # Compound assertions okay in tests
  "PTH",     # pathlib not required in tests
  "S101",    # assert in tests
  "S105",    # Hardcoded passwords in test settings
  "S106",    # Hardcoded passwords in test settings
  "SIM102",  # Collapsible if okay in tests
]
# Django source code - be lenient with linting for now
"django_templates_cythonized/*.py" = ["ALL"]
"django_templates_cythonized/loaders/*.py" = ["ALL"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--cov=django_templates_cythonized/loaders --cov-report=term-missing --no-cov-on-fail"
pythonpath = ["."]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
# Only loaders/ stay as pure Python; all other .py files compile to .so via
# Cython and can't be instrumented by coverage.
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
skip_covered = true

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
build-frontend = "build[uv]"
test-command = "python -c \"import django_templates_cythonized\""

[tool.cibuildwheel.linux]
archs = "x86_64"
